fixing alignment and adding notes (#118)
* fixing my fork

* adding notes and fixing alignment

* adding more notes about **usethis**

--- a/style.css
+++ b/style.css
@@ -37,8 +37,16 @@ pre code {
   margin-right: 0 !important;
   width: 55% !important;
 }
+.table {
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+  width: 55% !important;
+}
 
 /** This reduces the size of code chunks so it fits **/
 .sourceCode {
   font-size: 12px;
+}
+pre {
+  font-size: 12px !important;
 }
